--- a/ansible/roles/deploy-sh-glb/templates/externalDNS-service-account-role.yaml.j2
+++ b/ansible/roles/deploy-sh-glb/templates/externalDNS-service-account-role.yaml.j2
@@ -12,18 +12,23 @@ subjects:
   name: "{{ service_account_name }}"
   namespace: "{{ namespace }}"
 ---
-apiVersion: rbac.authorization.k8s.io/v1
+apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
   name: "{{ service_account_name }}"
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - endpoints
-  - services
-  - pods
-  - namespaces
-  verbs:
-  - list
-  - watch
+- apiGroups: [""]
+  resources: ["services"]
+  verbs: ["get","watch","list"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get","watch","list"]
+- apiGroups: ["extensions"] 
+  resources: ["ingresses"] 
+  verbs: ["get","watch","list"]
+- apiGroups: ["multiclusterdns.federation.k8s.io"] 
+  resources: ["dnsendpoints","dnsendpoints/status"] 
+  verbs: ["get","watch","list","patch","update"]  
+- apiGroups: [""]
+  resources: ["nodes"]
+  verbs: ["list"]  
